@@ -13,6 +13,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -33,7 +34,7 @@ public class SessionAuthenticationFilter extends OncePerRequestFilter {
             if (userId != null) {
                 userRepository.findById(userId).ifPresent(user -> {
                     UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                            user, null, List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
+                            user, null, Collections.emptyList()
                     );
                     SecurityContextHolder.getContext().setAuthentication(auth);
                 });
